Fix display on mobile devices

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,1 +1,14 @@
 @charset "UTF-8";
+
+
+@media (min-width: 300px) and (max-width: 600px) {
+    html,
+    body,
+    header,
+    footer,
+    #header,
+    #footer,
+    #main {
+        width: auto;
+    }
+}
